AOCL-LAPACK: Upgrade to LAPACK - 3.12 Part 3 - Single Precision New Files
Port Netlib Lapack-3.12 newly added single precision fortran files to c
Files added : sgedmd.c, sgedmdq.c, sgeqp3rk.c, slaqp2rk.c, slaqp3rk.c.

Signed-off-by: Venkatesha <vprasada@amd.com>
AMD-Internal: [CPUPL-6149]
Change-Id: Idea38525527da5893fa61760f58e62953274708e

--- a/src/map/lapack2flamec/f2c/c/CMakeLists.txt
+++ b/src/map/lapack2flamec/f2c/c/CMakeLists.txt
@@ -1463,6 +1463,11 @@ ${CMAKE_CURRENT_SOURCE_DIR}/sgelst.c
 ${CMAKE_CURRENT_SOURCE_DIR}/slatrs3.c
 ${CMAKE_CURRENT_SOURCE_DIR}/strsyl3.c
 ${CMAKE_CURRENT_SOURCE_DIR}/slarmm.c
+${CMAKE_CURRENT_SOURCE_DIR}/sgedmd.c
+${CMAKE_CURRENT_SOURCE_DIR}/sgedmdq.c
+${CMAKE_CURRENT_SOURCE_DIR}/sgeqp3rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/slaqp2rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/slaqp3rk.c
 ${CMAKE_CURRENT_SOURCE_DIR}/zbbcsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/zbdsqr.c
 ${CMAKE_CURRENT_SOURCE_DIR}/zcgesv.c
