AOCL-LAPACK: Upgrade to LAPACK - 3.12 Part 4 - Single Precision Complex New Files
Port Netlib Lapack-3.12 newly added single precision fortran files to c
Files added : cgedmd.c, cgedmdq.c, cgeqp3rk.c, claqp2rk.c, claqp3rk.c, crscl.c.

Signed-off-by: Venkatesha <vprasada@amd.com>
AMD-Internal: [CPUPL-6151]
Change-Id: I3bacb5a82b65d049b6250f565c301baa17b8ff77

--- a/src/map/lapack2flamec/f2c/c/CMakeLists.txt
+++ b/src/map/lapack2flamec/f2c/c/CMakeLists.txt
@@ -500,6 +500,12 @@ ${CMAKE_CURRENT_SOURCE_DIR}/cupmtr.c
 ${CMAKE_CURRENT_SOURCE_DIR}/cgelst.c
 ${CMAKE_CURRENT_SOURCE_DIR}/clatrs3.c
 ${CMAKE_CURRENT_SOURCE_DIR}/ctrsyl3.c
+${CMAKE_CURRENT_SOURCE_DIR}/cgedmd.c
+${CMAKE_CURRENT_SOURCE_DIR}/cgedmdq.c
+${CMAKE_CURRENT_SOURCE_DIR}/cgeqp3rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/claqp2rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/claqp3rk.c
+${CMAKE_CURRENT_SOURCE_DIR}/crscl.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dbbcsd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dbdsdc.c
 ${CMAKE_CURRENT_SOURCE_DIR}/dbdsqr.c
