CMake compiler flag update
Previously, -fopenmp flag was always added to the compiler flag when multi-threading was enabled. This Update modifies the CMake build system to include -fopenmp only when openmp is linked through EXT_OPENMP_LIB. This change is applicable to only CMake build system.

Signed-off-by: Sridhar Govindaswamy <Sridhar.Govindaswamy@amd.com>
Change-Id: Ic0ea9739ecf368bb946665fa7668ec31af974698

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -181,9 +181,6 @@ elseif(UNIX)
 	else()
 		message(STATUS "No ISA flag set")
 	endif()
-	if(ENABLE_MULTITHREADING)
-		set(COMPILER_OPTIMIZATION_FLAGS	"${COMPILER_OPTIMIZATION_FLAGS} -fopenmp")
-	endif()
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMPILER_OPTIMIZATION_FLAGS}")
 else()
 	message(STATUS "OS UNKNOWN CANNOT SET SIMD")
@@ -998,6 +995,8 @@ if(ENABLE_OPENMP)
 		target_link_libraries(${PROJECT_NAME}  ${LIBIOMP})
 
 		string(APPEND LIBS_LINK_FLAGS "-L${EXT_OPENMP_PATH} -l${EXT_OPENMP_LIB} ")
+
+		set	(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
 
 		if(UNIX)
 	        	target_link_libraries(${PROJECT_NAME} -Wl,--as-needed -ldl)
