AOCL LAPACK: Test Suite - Addition of getrfnp and getrfnpi APIs
Following changes are made in this commit:

1. Test cases for getrfnp and getrfnpi. These test cases use
   exisiting validate function of getrf to validate the result.
2. OV/UV test cases are also added.
3. Fix bug in getrfnpi API, where memory was being written to
   out of allocation bound when the given lda was greater than
   the column stride.

Change-Id: Ia8252268b35b49be91a128b966439baa8ec3dc38
Signed-off-by: samahmad <Sameer.Ahmad@amd.com>
AMD-Internal: CPUPL-6375

--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -47,4 +47,5 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_larf.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_sygvd.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_lange.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gecon.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_getrfnpi.c
 )
