Added missing CPP interface API's
libflame_interface.hh file split into multiple files each
contain different categories of APIs. The split files are
named according to the categories.
Missing APIs were added into libflame_interface.hh where
the other split .hh files are also included via #include
directive.

AMD-Internal: CPUPL-6373
Change-Id: Id725721470bcefbe63bc3a165824d6ac2d166e04

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -981,7 +981,14 @@ set(LIBFLAME_PUBLIC_HEADERS	"include/FLAME.h"
 				"src/lapacke/LAPACKE/include/lapacke.h"
 				"src/lapacke/LAPACKE/include/lapack.h"
 				"src/src_cpp/libflame_interface.hh"
-				"src/src_cpp/libflame.hh")
+				"src/src_cpp/libflame.hh"
+				"src/src_cpp/libflame_interface_aux.hh"
+				"src/src_cpp/libflame_interface_blas.hh"
+				"src/src_cpp/libflame_interface_eig.hh"
+				"src/src_cpp/libflame_interface_lin.hh"
+				"src/src_cpp/libflame_interface_lsq.hh"
+				"src/src_cpp/libflame_interface_orth.hh"
+				"src/src_cpp/libflame_interface_svd.hh")
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${LIBFLAME_PUBLIC_HEADERS}")
 
