AOCL LAPACK Test suite: Test case for ORMQR API and minor enhancements
Added test_ormqr.c, validate_ormqr.c for validating performance and
accuracy of LAPACK API ORMQR.

NOTE: 1) Modified ORGQR, ORG2R input m, n to valid values
         in case of config inputs.
      2) Added ORGQR workspace query for getting lwork value instead
         of using lwork from geqrf.
      3) Added code to display the selected interface for main test
         in output including matrix layout for lapacke.

AMD-Internal: CPUPL-6485
Change-Id: Ied015eaeb64df3513bb92c49d9c51ece2cb5a51a
Signed-off-by: dnikku <Deepika.Nikku@amd.com>

--- a/test/main/validate_src/CMakeLists.txt
+++ b/test/main/validate_src/CMakeLists.txt
@@ -49,5 +49,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/validate_lange.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_gecon.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_getrfnpi.c
 ${CMAKE_CURRENT_SOURCE_DIR}/validate_hetri_rook.c
+${CMAKE_CURRENT_SOURCE_DIR}/validate_ormqr.c
 )
 
