--- a/test/main/src/CMakeLists.txt
+++ b/test/main/src/CMakeLists.txt
@@ -59,7 +59,8 @@ ${CMAKE_CURRENT_SOURCE_DIR}/test_lange.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_gecon.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_getrfnp.c
 ${CMAKE_CURRENT_SOURCE_DIR}/test_getrfnpi.c
-${CMAKE_CURRENT_SOURCE_DIR}/test_hetri_rook.c)
+${CMAKE_CURRENT_SOURCE_DIR}/test_hetri_rook.c
+${CMAKE_CURRENT_SOURCE_DIR}/test_ormqr.c)
 
 if(ENABLE_CPP_TEST)
 add_subdirectory(cpp)
