--- a/test/main/src/cpp/CMakeLists.txt
+++ b/test/main/src/cpp/CMakeLists.txt
@@ -52,5 +52,6 @@ ${CMAKE_CURRENT_SOURCE_DIR}/invoke_stedc.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_gecon.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_hetrf.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_hetri_rook.cc
+${CMAKE_CURRENT_SOURCE_DIR}/invoke_ormqr.cc
 ${CMAKE_CURRENT_SOURCE_DIR}/invoke_common.hh
 )
