Static build must go through with just AOCL-Utils header path
For static library build of AOCL-LAPACK, the header path of AOCL-Utils
is sufficient. But recent changes made in usage of AOCL_ROOT forced setting
AOCL-Utils path as well. Fixed the same

AMD-Internal: CPUPL-6421
Change-Id: I4b5d98dffd6f02ea8b0a5406b279adc3474772da

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1063,8 +1063,8 @@ if (NOT LIBAOCLUTILS_INCLUDE_PATH OR NOT LIBAOCLUTILS_LIBRARY_PATH )
 	if (AOCL_UTILS_LIBRARY)
 		set(LIBAOCLUTILS_INCLUDE_PATH ${AOCL_UTILS_INCLUDE_DIR})
 		set(LIBAOCLUTILS_LIBRARY_PATH ${AOCL_UTILS_LIBRARY})
-	else()
-		message(FATAL_ERROR "AOCL-UTILS library path not provided! Set AOCL-UTILS library path using flag LIBAOCLUTILS_LIBRARY_PATH or AOCL_ROOT environment variable")
+	elseif(BUILD_SHARED_LIBS AND NOT LIBAOCLUTILS_INCLUDE_PATH)
+		message(FATAL_ERROR "AOCL-UTILS library header path not provided! Set the same using flag LIBAOCLUTILS_INCLUDE_PATH or AOCL_ROOT environment variable")
 	endif()
 else()
 	message(STATUS "AOCL-UTILS library path provided by user")
