Fix incorrect variable used for AOCL-Utils library name
In cmake file to set dependent libraries path, the variable name
for AOCL-Utils was wrongly set in Windows path section. This was
causing issue in static library generation. Fixed the same. Also
fixed incorrect header path for AOCL-Utils under Windows OS config.

AMD-Internal: CPUPL-6424

Change-Id: Id0e4223e63ae6102099455eb6aea111af89897f5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1307,7 +1307,7 @@ if (BUILD_TEST OR BUILD_LEGACY_TEST)
 		elseif (ENABLE_AOCL_BLAS)
 			# If BLAS library is provided from environment, then use it
 			set_target_properties(blas PROPERTIES
-			IMPORTED_IMPLIB ${BLAS_LIBRARY}}
+			IMPORTED_IMPLIB ${BLAS_LIBRARY}
 			POSITION_INDEPENDENT_CODE ON
 			)
 		endif()
