AOCL-LAPACK: Doxygen file update
Updated the doxygen file input path based on recent
cpp changes

Signed-off-by: Venkatesha <vprasada@amd.com>
AMD-Internal: [CPUPL-6446]
Change-Id: Iee1361d7c8eff644c2137d5f629c04163a28cdca

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -898,7 +898,7 @@ execute_process(
 set (INTERFACE_HEADER_DIR_PATHS "${CMAKE_SOURCE_DIR}/src/src_cpp")
 set (INTERFACE_TARGET_PATH "${CMAKE_SOURCE_DIR}/${BASE_INC_PATH}/libflame_interface.hh")
 execute_process(
-	COMMAND ${PYTHON_EXE} ${BLIS_FLATTEN_HEADER} "${C_COMMENT}" "${VERBOSE}"
+	COMMAND ${Python3_EXECUTABLE} ${BLIS_FLATTEN_HEADER}  "${VERBOSE}"
 	"${INTERFACE_HEADER_DIR_PATHS}/libflame_interface.hh" "${INTERFACE_TARGET_PATH}"
 	"${BASE_INC_PATH}" "${INTERFACE_HEADER_DIR_PATHS}"
 	RESULT_VARIABLE CMD_RESULT
