--- a/test/main/CMakeLists.txt
+++ b/test/main/CMakeLists.txt
@@ -37,9 +37,12 @@ elseif(UNIX)
     set(OpenMP_libomp_LIBRARY "-fopenmp" CACHE STRING "openmp library path")
     set(Test_C_Flags " -std=c11 -D_GNU_SOURCE -O2 -Wall -Wno-comment -Wno-unused-function" CACHE STRING "C Flags")
     set(Test_LD_Flags "-lm -lpthread" CACHE STRING "LD FLags")
+    if(ENABLE_ASAN)
+        set(Test_LD_Flags "${Test_LD_Flags} -fsanitize=address")
+    endif()
     if(EXT_OPENMP_PATH)
     	set(TEST_FLAGS "${LIBIOMP} ${OpenMP_libomp_LIBRARY} ${Test_C_Flags} ${Test_LD_Flags}")
-    else(EXT_OPENMP_PATH)
+    else()
     	set(TEST_FLAGS "${OpenMP_libomp_LIBRARY} ${Test_C_Flags} ${Test_LD_Flags}")
     endif()
     message(STATUS "${TEST_FLAGS}")
