Fix AOCL-Utils header path logic in CMake
HINT paths for AOCL-Utils header needed change. Also,
fixed the logic so that header path of AOCL-Utils is sufficient
for static builds.

AMD-Internal: [CPUPL-6489]
Change-Id: I1877380b31694d64905780887b9452f1b6d81a10

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1073,15 +1073,24 @@ endif ()
 	target_include_directories(${PROJECT_NAME} PUBLIC src/lapack/x86/generic)
 
 # IF AOCL-UTILS paths is not provided by user, try to get it from AOCL_ROOT environment vriable
-if (NOT LIBAOCLUTILS_INCLUDE_PATH OR NOT LIBAOCLUTILS_LIBRARY_PATH )
-	if (AOCL_UTILS_LIBRARY)
-		set(LIBAOCLUTILS_INCLUDE_PATH ${AOCL_UTILS_INCLUDE_DIR})
-		set(LIBAOCLUTILS_LIBRARY_PATH ${AOCL_UTILS_LIBRARY})
-	elseif(BUILD_SHARED_LIBS AND NOT LIBAOCLUTILS_INCLUDE_PATH)
-		message(FATAL_ERROR "AOCL-UTILS library header path not provided! Set the same using flag LIBAOCLUTILS_INCLUDE_PATH or AOCL_ROOT environment variable")
+if (NOT LIBAOCLUTILS_INCLUDE_PATH OR NOT LIBAOCLUTILS_LIBRARY_PATH)
+	if (NOT LIBAOCLUTILS_INCLUDE_PATH)
+		if(AOCL_UTILS_LIBRARY)
+			message("LIBAOCLUTILS_INCLUDE_PATH not set. AOCL-UTILS library path provided by AOCL_ROOT environment variable will be used")
+			set(LIBAOCLUTILS_INCLUDE_PATH ${AOCL_UTILS_INCLUDE_DIR})
+			set(LIBAOCLUTILS_LIBRARY_PATH ${AOCL_UTILS_LIBRARY})
+		else()
+			message(FATAL_ERROR "AOCL-UTILS library header path not provided! Set the same using flag LIBAOCLUTILS_INCLUDE_PATH or AOCL_ROOT environment variable")
+		endif()
+	elseif(NOT LIBAOCLUTILS_LIBRARY_PATH AND (BUILD_SHARED_LIBS OR BUILD_TEST OR BUILD_LEGACY_TEST OR BUILD_NETLIB_TEST))
+		if (AOCL_UTILS_LIBRARY)
+			message("LIBAOCLUTILS_LIBRARY_PATH not set. AOCL-UTILS library path provided by AOCL_ROOT environment variable will be used")
+			set(LIBAOCLUTILS_LIBRARY_PATH ${AOCL_UTILS_LIBRARY})
+			set(LIBAOCLUTILS_INCLUDE_PATH ${AOCL_UTILS_INCLUDE_DIR})
+		else()
+			message(FATAL_ERROR "AOCL-UTILS library path not provided! Set the same using flag LIBAOCLUTILS_LIBRARY_PATH or AOCL_ROOT environment variable")
+		endif()
 	endif()
-else()
-	message(STATUS "AOCL-UTILS library path provided by user")
 endif()
 
 message(STATUS "AOCL-UTILS library path : ${LIBAOCLUTILS_LIBRARY_PATH}")
