AOCL LAPACK: PKGCONFIG Changes
-> This commit fixes defect of aocl-utils dependency not being
reflected in the pkg-config file.
-> pkg-config file is now generated in
   {{INSTALL_DIR}}/lib/pkgconfig

Change-Id: Ic1a60e9a118db1e772ff237541c5c2dad7279293
Signed-off-by: samahmad <Sameer.Ahmad@amd.com>
AMD-Internal: CPUPL-6436

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1356,7 +1356,7 @@ endif()
 
 set(REQ_PKG_LIB ${PROJECT_NAME})
 configure_file(aocl-lapack.pc.in aocl-lapack.pc @ONLY)
-install(FILES ${CMAKE_BINARY_DIR}/aocl-lapack.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/pkgconfig)
+install(FILES ${CMAKE_BINARY_DIR}/aocl-lapack.pc DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/pkgconfig)
 
 # To View Added Definitions and C Flags
 get_directory_property( DirDefs COMPILE_DEFINITIONS )
